test: add tests

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,11 @@
 APP_NAME="Group Idea"
+PRIVATE_KEY1=
+PRIVATE_KEY2=
+PRIVATE_KEY3=
+PRIVATE_KEY4=
+RPC_URL=
+GELATO_RELAY_API_KEY=
+OWNER1=
+OWNER2=
+OWNER3=
+OWNER4=
