--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
+    "tslib": "^2.6.2",
     "typechain": "^8.3.1",
     "typescript": "^5.2.2"
   },
