feat: changed the config and uses of private key to create a wallet instance and use directly a Signer instance / fixed server url to use a config instead of env var

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,9 @@
   "compilerOptions": {
     "outDir": "./dist",
     "baseUrl": "./",
-    "target": "es2020",
-    "module": "commonjs",
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "Node",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
@@ -24,7 +25,6 @@
     "declarationMap": true,
     "inlineSources": false,
     "isolatedModules": true,
-    "moduleResolution": "node",
     "preserveWatchOutput": true,
 
   },
